kubernetes/base-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: base-app
  template:
    metadata:
      labels:
        app: base-app
    spec:
      containers:
      - name: base-app
        image: congtaojiang/whoami-nodejs-express
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
