kubernetes/base-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: base-svc
  labels:
    app: base-app
spec:
  type: ClusterIP
  selector:
    app: base-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
