kubernetes/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-svc
  labels:
    app: main-app
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
