kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  type: LoadBalancer
  selector:
    app: whoami
  ports:
  - port: 80
    targetPort: 80
